# static/swagger.json
@@ -21,6 +21,10 @@
     {
       "name": "User Request",
       "description": "Example API for requesting and return User requests"
+    },
+    {
+      "name": "Citas Request",
+      "description": "Example API for requesting and return Citas requests"
     }
   ],
   "paths": {
@@ -32,7 +36,7 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/components/schemas/bookRequests"
+              "$ref": "#/components/schemas/users"
             }
           }
         }
@@ -58,6 +62,48 @@
             "description": "OK",
             "schema": {
               "$ref": "#/components/schemas/users"
+            }
+          },
+          "400": {
+            "description": "Failed. Bad post data."
+          }
+        }
+      }
+    },
+    "/citas": {
+      "get": {
+        "tags": ["Citas Request"],
+        "summary": "Returns Citas Data",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/citas"
+            }
+          }
+        }
+      },
+
+      "post": {
+        "tags": ["Citas Request"],
+        "summary": "Create a new Cita",
+        "requestBody": {
+          "description": "Cita Request Post Object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/citasRequestPostBody"
+              }
+            }
+          }
+        },
+        "produces": ["application/json"],
+        "responses": {
+          "201": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/citas"
             }
           },
           "400": {
@@ -129,6 +175,46 @@
           }
         }
       },
+      "citas": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "object",
+            "format": "json",
+            "properties": {
+              "$oid": {
+                "type": "string",
+                "format": "string"
+              }
+            }
+          },
+
+          "doctor": {
+            "type": "string",
+            "format": "string"
+          },
+          "paciente": {
+            "type": "string",
+            "format": "string"
+          },
+          "timeStart": {
+            "type": "string",
+            "format": "string"
+          },
+          "timeEnd": {
+            "type": "string",
+            "format": "string"
+          },
+          "area": {
+            "type": "string",
+            "format": "string"
+          },
+          "date": {
+            "type": "string",
+            "format": "string"
+          }
+        }
+      },
       "usersRequestPostBody": {
         "type": "object",
         "properties": {
@@ -149,6 +235,35 @@
             "format": "string"
           },
           "age": {
+            "type": "string",
+            "format": "string"
+          }
+        }
+      },
+      "citasRequestPostBody": {
+        "type": "object",
+        "properties": {
+          "doctor": {
+            "type": "string",
+            "format": "string"
+          },
+          "paciente": {
+            "type": "string",
+            "format": "string"
+          },
+          "timeStart": {
+            "type": "string",
+            "format": "string"
+          },
+          "timeEnd": {
+            "type": "string",
+            "format": "string"
+          },
+          "area": {
+            "type": "string",
+            "format": "string"
+          },
+          "date": {
             "type": "string",
             "format": "string"
           }
